# dicio-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  custom_logging.py  docker-compose.yml  logging_config.json  main.py  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml
