[project]
name = "dicio-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "cachetools>=6.2.0",
    "fastapi[standard]==0.136.0",
    "hunspell>=0.5.5",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
